--- a/404.html
+++ b/404.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e6096c9264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../dist/css/style.min.css">
+    <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 
 <body>
@@ -18,8 +17,8 @@
     <nav class="nav">
         <div class="wrapper">
             <div class="nav__container">
-                <a href="../index.html" class="nav__logo">
-                    <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
+                <a href="index.html" class="nav__logo">
+                    <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
                     <p class="nav__logo-text">Forest</p>
                 </a>
 
@@ -28,10 +27,10 @@
                 </button>
 
                 <ul class="nav__list">
-                    <li class="nav__list-item"><a href="../index.html">Home</a></li>
-                    <li class="nav__list-item"><a href="../index.html#about">O nas</a></li>
-                    <li class="nav__list-item"><a href="../index.html#offer">Oferta</a></li>
-                    <li class="nav__list-item"><a href="../contact.html">Kontakt</a></li>
+                    <li class="nav__list-item"><a href="index.html">Home</a></li>
+                    <li class="nav__list-item"><a href="index.html#about">O nas</a></li>
+                    <li class="nav__list-item"><a href="index.html#offer">Oferta</a></li>
+                    <li class="nav__list-item"><a href="contact.html">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -40,11 +39,11 @@
         <section class="error404">
             <div class="wrapper">
             <div class="error404__container">
-                <img src="../dist/img/error404-640.png" alt="Bajkowa wiewiórka z żołędziem" class="error404__img">
+                <img src="dist/img/error404-640.png" alt="Bajkowa wiewiórka z żołędziem" class="error404__img">
                 <div class="error404__box">
                     <h1 class="error404__heading">Nie znaleziono strony</h1>
                     <p class="error404__text">Strona, którą chcesz odwiedzić może być tymczasowo niedostępna lub całkowicie usunięta.</p>
-                    <a href="../index.html" class="error404__link">Strona główna</a>
+                    <a href="index.html" class="error404__link">Strona główna</a>
                 </div>
             </div></div>
         </section>
@@ -52,8 +51,8 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="info">
-                <a href="../index.html" class="info__logo">
-                    <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
+                <a href="index.html" class="info__logo">
+                    <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
                     <p class="info__logo-text">Forest</p>
                 </a>
                 <div class="info__box">
@@ -87,7 +86,7 @@
     </footer>
 
 
-    <script src="../dist/js/script.min.js"></script>
+    <script src="dist/js/script.min.js"></script>
 </body>
 
 
