--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/style.min.css">
+    <script src="https://kit.fontawesome.com/e6096c9264.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../dist/css/style.min.css">
 </head>
 
 <body>
@@ -17,8 +18,8 @@
     <nav class="nav">
         <div class="wrapper">
             <div class="nav__container">
-                <a href="index.html" class="nav__logo">
-                    <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
+                <a href="../index.html" class="nav__logo">
+                    <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
                     <p class="nav__logo-text">Forest</p>
                 </a>
 
@@ -27,9 +28,9 @@
                 </button>
 
                 <ul class="nav__list">
-                    <li class="nav__list-item"><a href="index.html">Home</a></li>
-                    <li class="nav__list-item"><a href="index.html#about">O nas</a></li>
-                    <li class="nav__list-item"><a href="index.html#offer">Oferta</a></li>
+                    <li class="nav__list-item"><a href="../index.html">Home</a></li>
+                    <li class="nav__list-item"><a href="../index.html#about">O nas</a></li>
+                    <li class="nav__list-item"><a href="../index.html#offer">Oferta</a></li>
                     <li class="nav__list-item active"><a href="#contact">Kontakt</a></li>
                 </ul>
             </div>
@@ -78,19 +79,19 @@
 
                     <div class="contact__box">
                         <div class="contact__card">
-                            <img src="dist/img/icons/mail.svg" alt="Ikona koperty" class="contact__card-icon">
+                            <img src="../dist/img/icons/mail.svg" alt="Ikona koperty" class="contact__card-icon">
                             <div class="contact__card-content">
                                 <p class="contact__card-text">kontakt@forestgroup.pl</p>
                             </div>
                         </div>
                         <div class="contact__card">
-                            <img src="dist/img/icons/phone.svg" alt="Ikona telefonu" class="contact__card-icon">
+                            <img src="../dist/img/icons/phone.svg" alt="Ikona telefonu" class="contact__card-icon">
                             <div class="contact__card-content">
                                 <p class="contact__card-text">+48 666 555 777</p>
                             </div>
                         </div>
                         <div class="contact__card">
-                            <img src="dist/img/icons/users.svg" alt="Ikona mediów społecznościowych" class="contact__card-icon">
+                            <img src="../dist/img/icons/users.svg" alt="Ikona mediów społecznościowych" class="contact__card-icon">
                             <div class="contact__card-content">
                                 <a href="#" class="contact__card-content-icon" title="Facebook" area-label="Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>
                                 <a href="#" class="contact__card-content-icon" title="Instagram" area-label="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
@@ -101,7 +102,7 @@
 
                     <div class="contact__map">
                         
-                            <img src="dist/img/icons/map-pin.svg" alt="Ikona lokalizacji" class="contact__card-icon">
+                            <img src="../dist/img/icons/map-pin.svg" alt="Ikona lokalizacji" class="contact__card-icon">
                             <div class="contact__map-content">
                                 <p class="contact__map-text">ul. Jasnogórska 2</p>
                                 <p class="contact__map-text">31-358 Kraków</p>
@@ -124,8 +125,8 @@
         <footer class="footer">
             <div class="wrapper">
                 <div class="info">
-                    <a href="index.html" class="info__logo">
-                        <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
+                    <a href="../index.html" class="info__logo">
+                        <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
                         <p class="info__logo-text">Forest</p>
                     </a>
                     <div class="info__box">
@@ -159,7 +160,7 @@
         </footer>
 
 
-    <script src="dist/js/script.min.js"></script>
+    <script src="../dist/js/script.min.js"></script>
 </body>
 
 
