--- a/offer.html
+++ b/offer.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/style.min.css">
+    <script src="https://kit.fontawesome.com/e6096c9264.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../dist/css/style.min.css">
 </head>
 
 <body>
@@ -17,8 +18,8 @@
     <nav class="nav">
         <div class="wrapper">
             <div class="nav__container">
-                <a href="index.html" class="nav__logo">
-                    <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
+                <a href="../index.html" class="nav__logo">
+                    <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
                     <p class="nav__logo-text">Forest</p>
                 </a>
 
@@ -27,10 +28,10 @@
                 </button>
 
                 <ul class="nav__list">
-                    <li class="nav__list-item"><a href="index.html">Home</a></li>
-                    <li class="nav__list-item"><a href="index.html#about">O nas</a></li>
-                    <li class="nav__list-item"><a href="index.html#offer">Oferta</a></li>
-                    <li class="nav__list-item"><a href="contact.html">Kontakt</a></li>
+                    <li class="nav__list-item"><a href="../index.html">Home</a></li>
+                    <li class="nav__list-item"><a href="../index.html#about">O nas</a></li>
+                    <li class="nav__list-item"><a href="../index.html#offer">Oferta</a></li>
+                    <li class="nav__list-item"><a href="../contact.html">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -110,8 +111,8 @@
         <footer class="footer">
             <div class="wrapper">
                 <div class="info">
-                    <a href="index.html" class="info__logo">
-                        <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
+                    <a href="../index.html" class="info__logo">
+                        <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
                         <p class="info__logo-text">Forest</p>
                     </a>
                     <div class="info__box">
@@ -145,7 +146,7 @@
         </footer>
 
 
-        <script src="dist/js/script.min.js"></script>
+        <script src="../dist/js/script.min.js"></script>
 </body>
 
 
