--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e6096c9264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../dist/css/style.min.css">
+    <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
         <div class="wrapper">
             <div class="nav__container">
                 <a href="#home" class="nav__logo">
-                    <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
+                    <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="nav__logo-img">
                     <p class="nav__logo-text">Forest</p>
                 </a>
 
@@ -32,7 +31,7 @@
                     <li class="nav__list-item active"><a href="#home">Home</a></li>
                     <li class="nav__list-item"><a href="#about">O nas</a></li>
                     <li class="nav__list-item"><a href="#offer">Oferta</a></li>
-                    <li class="nav__list-item"><a href="../contact.html">Kontakt</a></li>
+                    <li class="nav__list-item"><a href="contact.html">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -52,7 +51,7 @@
             <h2 class="section__title">O Nas</h2>
             <div class="wrapper">
                 <div class="about__box">
-                    <img src="../dist/img/about-640.jpg" alt="Drzewo na jeziorze" class="about__img">
+                    <img src="dist/img/about-640.jpg" alt="Drzewo na jeziorze" class="about__img">
                     <div class="about__content">
                         <h3 class="about__content-headline">Niezapomniane przygody</h3>
                         <p class="about__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
@@ -83,15 +82,15 @@
                         <h3 class="offer__card-title">Demo</h3>
                         <p class="offer__card-price">$0</p>
                         <ul class="offer__card-list">
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item grayscale"><img src="../dist/img/icons/minus.svg" alt="">opcja
+                            <li class="offer__card-item grayscale"><img src="dist/img/icons/minus.svg" alt="">opcja
                                 poza pakietem</li>
-                            <li class="offer__card-item grayscale"><img src="../dist/img/icons/minus.svg" alt="">opcja
+                            <li class="offer__card-item grayscale"><img src="dist/img/icons/minus.svg" alt="">opcja
                                 poza pakietem</li>
-                            <li class="offer__card-item grayscale"><img src="../dist/img/icons/minus.svg" alt="">opcja
+                            <li class="offer__card-item grayscale"><img src="dist/img/icons/minus.svg" alt="">opcja
                                 poza pakietem</li>
                         </ul>
                         <button class="offer__card-btn">Wybierz</button>
@@ -100,15 +99,15 @@
                         <h3 class="offer__card-title">Standard</h3>
                         <p class="offer__card-price">$99</p>
                         <ul class="offer__card-list">
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item grayscale"><img src="../dist/img/icons/minus.svg" alt="">opcja
+                            <li class="offer__card-item grayscale"><img src="dist/img/icons/minus.svg" alt="">opcja
                                 poza pakietem</li>
-                            <li class="offer__card-item grayscale"><img src="../dist/img/icons/minus.svg" alt="">opcja
+                            <li class="offer__card-item grayscale"><img src="dist/img/icons/minus.svg" alt="">opcja
                                 poza pakietem</li>
                         </ul>
                         <button class="offer__card-btn">Wybierz</button>
@@ -117,15 +116,15 @@
                         <h3 class="offer__card-title">Premium</h3>
                         <p class="offer__card-price">$299</p>
                         <ul class="offer__card-list">
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
-                            <li class="offer__card-item"><img src="../dist/img/icons/check.svg" alt="">opcja w pakiecie
+                            <li class="offer__card-item"><img src="dist/img/icons/check.svg" alt="">opcja w pakiecie
                             </li>
                         </ul>
                         <button class="offer__card-btn">Wybierz</button>
@@ -134,7 +133,7 @@
                 </div>
                 <div class="offer__link">
                     <p class="offer__link-text">Szukasz czegoś innego? Zobacz naszą pełną ofertę!</p>
-                    <a class="offer__link-btn" href="../offer.html">Więcej...</a>
+                    <a class="offer__link-btn" href="offer.html">Więcej...</a>
                 </div>
             </div>
         </section>
@@ -144,7 +143,7 @@
         <div class="wrapper">
             <div class="info">
                 <a href="#home" class="info__logo">
-                    <img src="../dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
+                    <img src="dist/img/logo-forest-trans.png" alt="Logo w postaci drzewa" class="info__logo-img">
                     <p class="info__logo-text">Forest</p>
                 </a>
                 <div class="info__box">
